# viddler-cli

./: .gitignore  LICENCE
server/: clean-all.sh
server/base/: docker-compose.yml
server/base/cli/: Dockerfile
server/base/site/: Dockerfile
server/base/web/: Dockerfile
server/base/web/meet/: index.html  title.html
server/base/web/meet/css/: all.css
server/base/web/meet/libs/: app.bundle.min.js  lib-jitsi-meet.min.js  lib-jitsi-meet.min.map
server/base/web/meet/static/: 404.html  authError.html  close.html  close2.html  deviceSelectionPopup.html  dialInInfo.html  oauth.html  recommendedBrowsers.html
server/base/web/rootfs/defaults/: config.js  interface_config.js  meet.conf
server/dev/log-server/: .gitignore  Dockerfile
server/dev/wp-dev/: Dockerfile  custom-entrypoint.sh
server/dev/xdebug-proxy/: Dockerfile
site/: build.sh  package-lock.json  package.json
site/pages/: index.js
tools/cli/: Cargo.toml  build.rs  build.sh
tools/cli/src/: app.rs  aws.rs  cli.rs  cli_app.rs  docker.rs  git.rs  jitsi_env_file.rs  jitsi_project.rs  main.rs  project.rs  project_path.rs  server.rs  utils.rs  workspace.rs  wp.rs  wp_cli_client.rs  wp_docker.rs
tools/cli/src/graphql/: check_repo_exists.graphql  create_remote_repo.graphql  viewer_info.graphql
tools/db-admin/: Cargo.toml
tools/db-admin/frontend/src/: App.svelte  Explorer.svelte  QueryInput.svelte  QueryResult.svelte  TableExplorer.svelte
tools/db-admin/src/: db_admin.rs  main.rs
tools/log_server/: Cargo.toml
tools/log_server/assets/: style.css
tools/log_server/src/: comp.rs  db.rs  error.rs  field.rs  input.rs  insert.rs  main.rs  model.rs  query.rs  utils.rs  view.rs
tools/log_server/src/comp/: data_table.rs  doc.rs
tools/log_server/src/field/: boolean.rs  date.rs  datetime.rs  id.rs  int.rs  text.rs
tools/proxy/: Cargo.toml  build-prod.sh  build.sh  run.sh  vagrant-build.sh  vagrant-release.sh
tools/proxy/src/: chunked_file.rs  letsencrypt.rs  log_server.rs  main.rs  proxy.rs  redir_middleware.rs  search.rs  util.rs
tools/scratchpad/: Cargo.toml
tools/scratchpad/src/: main.rs
tools/utils/: Cargo.toml
tools/utils/src/: arena.rs  lib.rs
