[package]
name = "viddler-project-api"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"
workspace = ".."
build = "build.rs"

[build-dependencies]
clap = "2.33.0"
dirs = "2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version="1.0", features=["preserve_order"] }
serde-hjson = "0.9"
serde_yaml = "0.8"
dirs = "2.0"
git2 = "0.10"
ssh2 = "0.5"
indexmap = { version="1.3", features=["serde-1"] }
graphql_client = "0.8.0"
awc = "0.2"
actix = "0.8"
actix-codec = "0.1"
env_logger = "0.7"
actix-rt = "0.2"
actix-web = { version="1.0", features=["ssl"] }
#tokio = "0.1.22"
futures = "0.1"
console = "0.10"
dialoguer = "0.4.0"
indicatif = "0.12"
ctrlc = "3.1"
shared_child = "0.3"
rusoto_credential = "0.41"
rusoto_core = "0.41"
rusoto_ec2 = "0.41"
chrono = "0.4"
terminal_size = "0.1"
termion = "1.5"
failure = "0.1"
failure_derive = "0.1"
walkdir = "2.2"
tar = "0.4"
zip = "0.5"
filetime = "0.2"