[package]
name = "db-admin"
version = "0.1.0"
authors = ["brygga-dev <brygga.dev@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
actix-rt = "0.2"
awc = "0.2"
actix-web = { version="1.0", features=["ssl"] }
actix-http = "0.2"
actix-multipart = "0.1"
actix-files = "0.1"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"
chrono = "0.4"
clap = "2.33.0"
mysql_utils = { path="../mysql-utils" }