[package]
name = "log_server"
version = "0.1.0"
authors = ["brygga-dev <brygga.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = {version = "1.3", features = ["serde-1"]}
chrono = "0.4"
serde_json = "1.0"
serde = "1.0"

actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
actix-utils = "1.0"

futures = "0.3.1"
env_logger = "0.5"

[dependencies.rusqlite]
version = "0.21"
features = ["bundled", "chrono"]